--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
        class="block bg-blue-500 rounded-md shadow-md hover:scale-105 transition-transform text-right overflow-hidden">
       <div class="flex flex-row-reverse items-center gap-3 p-4">
         <i class="fa-solid fa-map-marker-alt text-2xl text-white"></i>
-        <span class="text-lg sm:text-xl font-semibold text-white">تاریق بەهەرکا، عێراق</span>
+        <span class="text-lg sm:text-xl font-semibold text-white">هەولێر، ڕێگای بەحرکە</span>
       </div>
       <iframe class="w-full h-56 sm:h-72 pointer-events-none" 
               src="https://www.google.com/maps?q=36.316925,44.033688&hl=es;z=14&output=embed" 
