--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                         <div class="text-right flex-1 flex items-center justify-between">
                             <h3 class="text-md font-bold text-white">@meerjaff17</h3>
                             <a href="https://www.tiktok.com/@meerjaff17?_t=ZS-908Plk28N5L&_r=1" target="_blank" class="btn bg-gradient-to-r from-pink-500 to-purple-600 text-white font-medium text-xs inline-block">
-                                <i class="fab fa-tiktok ml-1"></i> شوێنی بکە
+                                <i class="fab fa-tiktok ml-1"></i> کردنەوە
                             </a>
                         </div>
                     </div>
@@ -293,7 +293,7 @@
                         <div class="text-right flex-1 flex items-center justify-between">
                             <h3 class="text-md font-bold text-white">@aramxushnaw2</h3>
                             <a href="https://www.tiktok.com/@aramxushnaw2?_t=ZS-908PodRDYwC&_r=1" target="_blank" class="btn bg-gradient-to-r from-pink-500 to-purple-600 text-white font-medium text-xs inline-block">
-                                <i class="fab fa-tiktok ml-1"></i> شوێنی بکە
+                                <i class="fab fa-tiktok ml-1"></i> کردنەوە
                             </a>
                         </div>
                     </div>
@@ -344,7 +344,7 @@
                             <i class="fas fa-map-marker-alt text-white text-2xl"></i>
                         </div>
                         <div class="text-right">
-                            <h3 class="text-2xl font-bold text-white">شوێنەکەمان</h3>
+                            <h3 class="text-2xl font-bold text-white">ناونیشان</h3>
                             <p class="text-white opacity-80">طريق بحركه، عێراق</p>
                         </div>
                     </div>
@@ -370,7 +370,7 @@
         <!-- Stats Section -->
         <div class="mt-8 max-w-4xl mx-auto fade-in-up" style="animation-delay: 0.7s;">
             <div class="card p-6">
-                <h2 class="text-2xl font-bold text-white text-center mb-6">ژمارەکانمان</h2>
+                <h2 class="text-2xl font-bold text-white text-center mb-6">سۆشیال میدیای ئێمە</h2>
                 <div class="grid grid-cols-1 md:grid-cols-4 gap-4 stagger-animation">
                     <div class="bg-white bg-opacity-10 rounded-lg p-4 text-center">
                         <div class="text-3xl font-bold text-white">1.2K+</div>
@@ -378,7 +378,7 @@
                     </div>
                     <div class="bg-white bg-opacity-10 rounded-lg p-4 text-center">
                         <div class="text-3xl font-bold text-white">15K+</div>
-                        <div class="text-white opacity-80">کۆی هەموو ئەوەندەکان</div>
+                        <div class="text-white opacity-80">کۆی گشتی</div>
                     </div>
                     <div class="bg-white bg-opacity-10 rounded-lg p-4 text-center">
                         <div class="text-3xl font-bold text-white">50+</div>
@@ -396,7 +396,7 @@
     <!-- Footer -->
     <footer class="py-6 px-4 mt-8">
         <div class="container mx-auto text-center">
-            <p class="text-white opacity-70">© 2023 پۆشاکی ئارام خۆشناو. هەموو مافەکان پارێزراون.</p>
+            <p class="text-white opacity-70">پۆشاکی ئارام خۆشناو</p>
         </div>
     </footer>
 
@@ -418,7 +418,7 @@
             const marker = L.marker([36.316925, 44.033688]).addTo(map);
             marker.bindPopup(`
                 <div class="text-center kurdish-text" dir="rtl">
-                    <h3 class="font-bold text-lg">شوێنەکەمان</h3>
+                    <h3 class="font-bold text-lg">ناونیشان</h3>
                     <p class="my-2">طريق بحركه، عێراق</p>
                     <a href="https://www.google.com/maps?q=36.316925,44.033688" 
                        target="_blank" 
